@@ -1,6 +1,4 @@
 html.js #module-filter-submit {
-  float: left;
-  clear: both;
   background-color: #F6F6F6;
   width: 239px;
   border: 1px solid #ccc;
